--- a/public/css/datatables.css
+++ b/public/css/datatables.css
@@ -5,7 +5,7 @@
 table.dataTable tbody tr {
     background-color: transparent;
 }
-#locationsTable_filter {
+.dataTables_filter {
     padding-right: 50px;
 }
 .dataTables_wrapper .dataTables_length, .dataTables_wrapper .dataTables_filter, .dataTables_wrapper .dataTables_info, .dataTables_wrapper .dataTables_processing, .dataTables_wrapper .dataTables_paginate {
@@ -14,7 +14,7 @@ table.dataTable tbody tr {
 .dataTables_wrapper .dataTables_paginate .paginate_button:hover {
     color: rgb(255,153,51) !important;
 }
-#locationsTable_paginate {
+.dataTables_paginate {
     padding-right: 50px;
 }
 .dataTables_wrapper {
