--- a/public/css/datatables.css
+++ b/public/css/datatables.css
@@ -3,20 +3,21 @@
  */
 
 table.dataTable tbody tr {
-    background-color: transparent;
+     background-color: #2E302D;
 }
-.dataTables_filter {
-    padding-right: 50px;
+
+.table-striped>tbody>tr:nth-of-type(odd) {
+     background-color: #292929;
 }
-.dataTables_wrapper .dataTables_length, .dataTables_wrapper .dataTables_filter, .dataTables_wrapper .dataTables_info, .dataTables_wrapper .dataTables_processing, .dataTables_wrapper .dataTables_paginate {
-    color: rgb(255,153,51);
+
+td,th {
+     color: rgb(255,153,51);
 }
-.dataTables_wrapper .dataTables_paginate .paginate_button:hover {
-    color: rgb(255,153,51) !important;
+
+.dataTables_wrapper .dataTables_paginate .paginate_button  {
+     color: rgb(255,153,51) !important;
 }
-.dataTables_paginate {
-    padding-right: 50px;
-}
-.dataTables_wrapper {
-    position: static;
+
+.dataTables_info {
+     color: rgb(255,153,51) !important;
 }
